--- a/display.html
+++ b/display.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <h1>Display Property</h1>
- 
+    
+     <button> Click Here </button>
     <div id="first"> First element </div>
     <div id="second"> Second element </div>
     <div id="third"> Third element </div> 
+
 </body>
 </html>
