add transiiton file and update all files

--- a/box_border.html
+++ b/box_border.html
@@ -7,12 +7,12 @@
   <title>CSS Practice</title>
 
   
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="box_border.css">
 </head>
 
 <body>
   <h1>CSS Practice</h1>
-  <h3>Border properties.</h3>
+  <h3>Border properties</h3>
 
 
   <div>
