--- a/padding_margin.html
+++ b/padding_margin.html
@@ -7,7 +7,7 @@
   <title>Practice Qs</title>
 
   
-  <link rel="stylesheet" href="style4.css">
+  <link rel="stylesheet" href="padding.css">
 </head>
 
 <body>
