--- a/display.html
+++ b/display.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Simple Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="display.css">
 </head>
 <body>
 
