--- a/selectors.html
+++ b/selectors.html
@@ -7,7 +7,7 @@
   <title>CSS Practice</title>
 
   
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="selectors.css">
 </head>
 
 <body>
