update layout file

--- a/layout.html
+++ b/layout.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-  <h1 class="title">Tech Fest 2025</h1>
+  <div class="header">
+    <h2>TECH FEST 2025</h2>
+  </div>
 
   <div class="profile-card">
     <h2> Welcome </h2>
