update flexbox files

--- a/flexbox.html
+++ b/flexbox.html
@@ -9,7 +9,6 @@
 
 <body>
 
-  <h1>CSS Flexbox Practice</h1>
 
   <section>
     <h2>1. Flex Direction</h2>
@@ -96,5 +95,15 @@
     </div>
   </section>
 
-</body>
+
+ <section>
+    <h2>9. Navbar Example</h2>
+
+<div id="navbar">
+  <div class="option">logo</div>
+  <div class="option">Home</div>
+  <div class="option">About</div>
+  <div class="option">Contact</div>
+
+  </body>
 </html>
