--- a/grid.html
+++ b/grid.html
@@ -9,27 +9,15 @@
 
 <body>
 
-    <div class="grid-container">
-        <div class="grid-item item1">Item 1</div>
-        <div class="grid-item item2">Item 2</div>
-        <div class="grid-item item3">Item 3</div>
-        <div class="grid-item item4">Item 4</div>
-        <div class="grid-item item5">Item 5</div>
-        <div class="grid-item item6">Item 6</div>
+    <div class="container">
+        <div class="item1">Item 1</div>
+        <div class="item2">Item 2</div>
+        <div class="item3">Item 3</div>
+        <div class="item4">Item 4</div>
+        <div class="item5">Item 5</div>
+        <div class="item6">Item 6</div>
     </div>
 
-<div>
-    <div class="grid-container-2">
-        <div class="grid-item-a">A</div>
-        <div class="grid-item-b">B</div>
-        <div class="grid-item-c">C</div>
-        <div class="grid-item-d">D</div>
-        <div class="grid-item-e">E</div>
-        <div class="grid-item-f">F</div>
-    </div>
-
-
-</div>
 
 </body>
 </html>
